responsive on mobile fix

--- a/src/Components/Buttons/Buttons.css
+++ b/src/Components/Buttons/Buttons.css
@@ -68,7 +68,6 @@ button:hover {
   }
   .newQuote {
     width: 135px;
-    font-size: 14px; 
     margin-left: 40px; 
     white-space: nowrap; 
   }
